compiler/src/snapshots/compiler__lexer__test__snapshot_tests@comments.tapir.snap
---
source: crates/tapir-script/compiler/src/lexer.rs
expression: output
input_file: crates/tapir-script/compiler/src/snapshot_tests/lexer/comments.tapir
---
[
  Ok(KeywordWait),
  Ok(Semicolon),
  Ok(KeywordWait),
  Ok(Semicolon),
]
