compiler/src/snapshots/compiler__lexer__test__snapshot_tests@unary_operators.tapir.snap
---
source: compiler/src/lexer.rs
expression: output
input_file: compiler/src/snapshot_tests/lexer/unary_operators.tapir
---
[
  Ok(KeywordVar),
  Ok(Identifier("neg")),
  Ok(Assign),
  Ok(OperatorSub),
  Ok(Integer("5")),
  Ok(Semicolon),
  Ok(KeywordVar),
  Ok(Identifier("not_op")),
  Ok(Assign),
  Ok(OperatorNot),
  Ok(True),
  Ok(Semicolon),
  Ok(KeywordVar),
  Ok(Identifier("bitnot")),
  Ok(Assign),
  Ok(OperatorBitNot),
  Ok(Integer("255")),
  Ok(Semicolon),
  Ok(KeywordVar),
  Ok(Identifier("double_neg")),
  Ok(Assign),
  Ok(OperatorSub),
  Ok(OperatorSub),
  Ok(Integer("10")),
  Ok(Semicolon),
  Ok(KeywordVar),
  Ok(Identifier("double_not")),
  Ok(Assign),
  Ok(OperatorNot),
  Ok(OperatorNot),
  Ok(False),
  Ok(Semicolon),
  Ok(KeywordVar),
  Ok(Identifier("double_bitnot")),
  Ok(Assign),
  Ok(OperatorBitNot),
  Ok(OperatorBitNot),
  Ok(Integer("42")),
  Ok(Semicolon),
  Ok(KeywordVar),
  Ok(Identifier("combo")),
  Ok(Assign),
  Ok(OperatorSub),
  Ok(Integer("5")),
  Ok(OperatorAdd),
  Ok(OperatorNot),
  Ok(True),
  Ok(OperatorBitAnd),
  Ok(OperatorBitNot),
  Ok(Integer("0")),
  Ok(Semicolon),
]
