compiler/src/snapshots/compiler__lexer__test__snapshot_tests@variable_declaration.tapir.snap
---
source: crates/tapir-script/compiler/src/lexer.rs
expression: output
input_file: crates/tapir-script/compiler/src/snapshot_tests/lexer/variable_declaration.tapir
---
[
  Ok(KeywordVar),
  Ok(Identifier("x")),
  Ok(Assign),
  Ok(Integer("3")),
  Ok(Semicolon),
]
